# template-fastapi-project

./: Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: api.py
app/api/context/: context_local.py
app/api/controller/v1/: chat_bot_activity_controller.py  user_controller.py  v1.py
app/api/database/: asyncpg_pool.py  connection_handler.py  session.py
app/api/depend/: connection_depend.py
app/api/dto/: user_dto.py
app/api/entity/: chat_bot_activity.py  user.py
app/api/enum/: connection_type_enum.py
app/api/mapper/: user_mapper.py
app/api/property/: config_properties.py
app/api/repository/: chat_bot_activity_repository.py  user_repository.py
app/api/repository/impl/: chat_bot_activity_impl.py  user_repository_excel_impl.py  user_repository_impl.py
app/api/schema/: connection_schema.py
app/api/service/: chat_bot_activity_service.py  user_service.py
app/api/service/impl/: chat_bot_activity_service_impl.py  user_service_impl.py
app/api/statement/: user_statement.py
app/test/: conftest.py  run.py
app/test/integration/: test_api.py
app/test/unit/: test_connection_db.py  test_user_service_impl.py
